--- a/Rails/notable/Trunk/public/.htaccess
+++ b/Rails/notable/Trunk/public/.htaccess
@@ -23,13 +23,13 @@ RewriteEngine On
 # then you MUST also set the RewriteBase in this htaccess file.
 #
 # Example:
-#   Alias /myrailsapp /path/to/myrailsapp/public
-#   RewriteBase /myrailsapp
+#   Alias /dev/notable/ /home/rendale/dev/notable/public/
+#   RewriteBase /dev/notable
 
-RewriteRule ^$ index.html [QSA]
+#RewriteRule ^$ index.html [QSA]
 RewriteRule ^([^.]+)$ $1.html [QSA]
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ dispatch.cgi [QSA,L]
+RewriteRule ^(.*)$ dispatch.fcgi [QSA,L]
 
 # In case Rails experiences terminal errors
 # Instead of displaying this message you can supply a file here which will be rendered instead
