git-svn-id: file:///Users/will/rendale@82 651630e0-a32e-0410-a001-f4242d931729

--- a/Rails/SimplePhotoGallery/Trunk/config/database.yml
+++ b/Rails/SimplePhotoGallery/Trunk/config/database.yml
@@ -28,6 +28,7 @@ test:
 
 production:
   adapter: mysql
-  database: SPG
-  username: root
-  password: 
+  host: db.rendale.com
+  database: yapa
+  username: yapa
+  password: tr1vial
